--- a/total.html
+++ b/total.html
@@ -65,6 +65,7 @@
         <table class="table table-bordered">
             <thead class="table-light text-center">
                 <tr>
+                    <th>勾選</th>
                     <th>品名</th>
                     <th>單價</th>
                     <th>數量</th>
@@ -74,6 +75,9 @@
             <tbody>
                 <template x-for="item in group9Items()" :key="item.product_name">
                     <tr class="text-center" x-show="!showOnlyWithCount || item.count > 0">
+                        <td>
+                            <input type="checkbox" x-model="item.checked" />
+                        </td>
                         <td x-text="item.product_name"></td>
                         <td x-text="item.price"></td>
                         <td>
