--- a/total.html
+++ b/total.html
@@ -1,186 +1,214 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
-
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title>試算表</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3/dist/cdn.min.js"></script>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+  <title>產品試算器（多 Partner）</title>
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
+  <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3/dist/cdn.min.js"></script>
 </head>
+<body x-data="productApp()" x-init="init(); loadData()">
 
-<body x-data="productApp()" x-init="loadData()">
+  <div class="container my-5">
+    <h2 class="text-center mb-4">產品試算器（多 Partner 加總）</h2>
 
-    <div class="container my-5">
-        <h2 class="text-center mb-4">產品試算器</h2>
-
-        <div class="d-flex justify-content-between mb-3 flex-wrap gap-2">
-            <button class="btn btn-outline-secondary" @click="showOnlyWithCount = !showOnlyWithCount">
-                <span x-text="showOnlyWithCount ? '全部商品' : '只顯示有數量'"></span>
-            </button>
-            <select x-model="selectedDate" @change="loadData()" class="form-select w-auto">
-                <option value="0" selected>日期</option>
-                <option value="2025/5/16">2025/5/16</option>
-            </select>
-            <select x-model="partner_id" @change="loadData()" class="form-select w-auto">
-                <option value="" selected>夥伴</option>
-                <option value="北一">北一</option>
-                <option value="北二">北二</option>
-            </select>
-        </div>
-
-        <!-- 非第9組 (餅類) -->
-        <h4>餅類</h4>
-        <table class="table table-bordered">
-            <thead class="table-light text-center">
-                <tr>
-                    <th>勾選</th>
-                    <th>品名</th>
-                    <th>單價</th>
-                    <th>數量</th>
-                    <th>小計</th>
-                </tr>
-            </thead>
-            <tbody>
-                <template x-for="item in otherItems()" :key="item.product_name">
-                    <tr class="text-center" x-show="!showOnlyWithCount || item.count > 0">
-                        <td>
-                            <input type="checkbox" x-model="item.checked" />
-                        </td>
-                        <td x-text="item.product_name"></td>
-                        <td x-text="item.price"></td>
-                        <td>
-                            <input type="number" class="form-control form-control-sm" x-model.number="item.count"
-                                @input="update(item)" min="0" />
-                        </td>
-                        <td x-text="item.total.toFixed(2)"></td>
-                    </tr>
-                </template>
-            </tbody>
-            <tfoot class="table-secondary text-end">
-                <tr>
-                    <td colspan="4"><strong>小計</strong></td>
-                    <td><strong x-text="calculateOtherGroupsTotal().toFixed(2)"></strong></td>
-                </tr>
-            </tfoot>
-        </table>
-
-        <!-- 第9組 (零食類) -->
-        <h4>零食類</h4>
-        <table class="table table-bordered">
-            <thead class="table-light text-center">
-                <tr>
-                    <th>勾選</th>
-                    <th>品名</th>
-                    <th>單價</th>
-                    <th>數量</th>
-                    <th>小計</th>
-                </tr>
-            </thead>
-            <tbody>
-                <template x-for="item in group9Items()" :key="item.product_name">
-                    <tr class="text-center" x-show="!showOnlyWithCount || item.count > 0">
-                        <td>
-                            <input type="checkbox" x-model="item.checked" />
-                        </td>
-                        <td x-text="item.product_name"></td>
-                        <td x-text="item.price"></td>
-                        <td>
-                            <input type="number" class="form-control form-control-sm" x-model.number="item.count"
-                                @input="update(item)" min="0" />
-                        </td>
-                        <td x-text="item.total.toFixed(2)"></td>
-                    </tr>
-                </template>
-            </tbody>
-            <tfoot class="table-secondary text-end">
-                <tr>
-                    <td colspan="4"><strong>小計</strong></td>
-                    <td><strong x-text="calculateGroup9Total().toFixed(2)"></strong></td>
-                </tr>
-            </tfoot>
-        </table>
-
-        <!-- 總計 -->
-        <div class="text-end mt-4">
-            <h4>總計：<span x-text="calculateTotal().toFixed(2)"></span></h4>
-        </div>
+    <div class="row mb-3 g-2">
+      <div class="col-auto">
+        <!-- 日期選單 -->
+        <select x-model="selectedDate" @change="loadData()"
+                class="form-select">
+          <template x-for="d in dates" :key="d">
+            <option :value="d" x-text="d"></option>
+          </template>
+        </select>
+      </div>
+      <div class="col-auto">
+        <!-- Partner 多選 -->
+        <select x-model="selectedPartners" @change="loadData()"
+                multiple size="4"
+                class="form-select">
+          <template x-for="p in partnerOptions" :key="p">
+            <option :value="p" x-text="p"></option>
+          </template>
+        </select>
+      </div>
+      <div class="col-auto d-flex align-items-center">
+        <button class="btn btn-outline-secondary"
+                @click="showOnlyWithCount = !showOnlyWithCount">
+          <span x-text="showOnlyWithCount ? '顯示全部' : '只看有數量'"></span>
+        </button>
+      </div>
     </div>
 
-    <script>
-        function productApp() {
-            return {
-                items: [],
-                showOnlyWithCount: false,
-                partnerId:"北二",
-                selectedDate:"2025/5/15",
+    <!-- 餅類 -->
+    <h4>餅類</h4>
+    <table class="table table-bordered text-center">
+      <thead class="table-light">
+        <tr>
+          <th>勾選</th><th>品名</th><th>單價</th><th>數量</th><th>小計</th>
+        </tr>
+      </thead>
+      <tbody>
+        <template x-for="item in otherItems()" :key="item.product_name">
+          <tr x-show="!showOnlyWithCount || item.count>0">
+            <td><input type="checkbox" x-model="item.checked"></td>
+            <td x-text="item.product_name"></td>
+            <td x-text="item.price"></td>
+            <td>
+              <input type="number" class="form-control form-control-sm"
+                     x-model.number="item.count"
+                     @input="update(item)" min="0">
+            </td>
+            <td x-text="item.total.toFixed(2)"></td>
+          </tr>
+        </template>
+      </tbody>
+      <tfoot class="table-secondary">
+        <tr>
+          <td colspan="4"><strong>餅類小計</strong></td>
+          <td><strong x-text="calculateOtherGroupsTotal().toFixed(2)"></strong></td>
+        </tr>
+      </tfoot>
+    </table>
 
-                async loadData() {
-                    try {
-                        const [prodRes, orderRes] = await Promise.all([
-                            fetch('non_pickup.json'),
-                            fetch('/.netlify/functions/getData')
-                        ]);
-                        if (!prodRes.ok) throw new Error('讀取產品清單失敗');
-                        if (!orderRes.ok) throw new Error('讀取訂單資料失敗');
+    <!-- 零食類 -->
+    <h4>零食類</h4>
+    <table class="table table-bordered text-center">
+      <thead class="table-light">
+        <tr>
+          <th>勾選</th><th>品名</th><th>單價</th><th>數量</th><th>小計</th>
+        </tr>
+      </thead>
+      <tbody>
+        <template x-for="item in group9Items()" :key="item.product_name">
+          <tr x-show="!showOnlyWithCount || item.count>0">
+            <td><input type="checkbox" x-model="item.checked"></td>
+            <td x-text="item.product_name"></td>
+            <td x-text="item.price"></td>
+            <td>
+              <input type="number" class="form-control form-control-sm"
+                     x-model.number="item.count"
+                     @input="update(item)" min="0">
+            </td>
+            <td x-text="item.total.toFixed(2)"></td>
+          </tr>
+        </template>
+      </tbody>
+      <tfoot class="table-secondary">
+        <tr>
+          <td colspan="4"><strong>零食類小計</strong></td>
+          <td><strong x-text="calculateGroup9Total().toFixed(2)"></strong></td>
+        </tr>
+      </tfoot>
+    </table>
 
-                        const products = await prodRes.json();
-                        const { orders } = await orderRes.json();
+    <!-- 總計 -->
+    <div class="text-end mt-4">
+      <h4>總計：<span x-text="calculateTotal().toFixed(2)"></span></h4>
+    </div>
+  </div>
 
-                        // 篩選出使用者選定的 partnerId/date
-                        const currentOrder = orders.find(o =>
-                            o.partnerId === this.partnerId && o.date === this.selectedDate
-                        ) || { items: {} };
+  <script>
+    function productApp() {
+      return {
+        // UI state
+        dates: [],                // 今天起往後 6 天
+        selectedDate: '',         // 綁定日期
+        partnerOptions: [],       // 該日所有 partnerId
+        selectedPartners: [],     // 綁定多選結果
+        items: [],                // 試算清單
+        showOnlyWithCount: false,
 
-                        // map 全部產品
-                        this.items = products.map(prod => {
-                            const saved = currentOrder.items[prod.product_name] || {};
-                            const count = saved.count || 0;
-                            const checked = saved.checked || false;
-                            const total = count * prod.price;
-                            return { ...prod, count, checked, total };
-                        });
+        // 1. 產生日期下拉
+        init() {
+          const today = new Date();
+          this.dates = Array.from({length:7},(_,i)=>{
+            const d = new Date(today);
+            d.setDate(today.getDate()+i);
+            return d.toLocaleDateString('zh-Hant');
+          });
+          this.selectedDate = this.dates[0];
+        },
 
-                    } catch (e) {
-                        console.error('載入資料失敗：', e);
-                    }
-                },
+        // 2. 載入並聚合
+        async loadData() {
+          if (!this.selectedDate) return;
+          try {
+            // 拿所有訂單
+            const res = await fetch('/.netlify/functions/getData');
+            if (!res.ok) throw new Error(res.statusText);
+            const { orders } = await res.json();
 
-                update(item) {
-                    item.total = (item.count || 0) * (item.price || 0);
-                },
+            // 過濾出該日訂單
+            const todayOrders = orders.filter(o=>o.date===this.selectedDate);
 
-                group9Items() {
-                    return this.items.filter(i => i.product_group === 9);
-                },
-                otherItems() {
-                    return this.items.filter(i => i.product_group !== 9);
-                },
+            // 抽 partner 清單 & 預設全選
+            this.partnerOptions = [...new Set(todayOrders.map(o=>o.partnerId))];
+            this.selectedPartners = [...this.partnerOptions];
 
-                calculateGroup9Total() {
-                    return this.group9Items()
-                        .filter(i => i.checked && i.count > 0)
-                        .reduce((sum, i) => sum + i.total, 0);
-                },
-                calculateOtherGroupsTotal() {
-                    return this.otherItems()
-                        .filter(i => i.checked && i.count > 0)
-                        .reduce((sum, i) => sum + i.total, 0);
-                },
-                calculateTotal() {
-                    return this.calculateGroup9Total() + this.calculateOtherGroupsTotal();
-                },
+            // 聚合所有選中 partner 的 items
+            const agg = {};
+            todayOrders
+              .filter(o=> this.selectedPartners.includes(o.partnerId))
+              .forEach(o=>{
+                Object.entries(o.items).forEach(([name,{count,checked}])=>{
+                  agg[name] = (agg[name]||0) + (count||0);
+                });
+              });
 
-                isAllChecked() {
-                    return this.items.length > 0 && this.items.every(i => i.checked);
-                },
-                toggleSelectAll() {
-                    const newState = !this.isAllChecked();
-                    this.items.forEach(i => i.checked = newState);
-                }
-            }
+            // 再從 non_pickup.json 拿 metadata
+            const prodRes = await fetch('non_pickup.json');
+            const products = await prodRes.json();
+
+            // 結合 metadata + 聚合數量
+            this.items = products.map(p=>{
+              const cnt = agg[p.product_name]||0;
+              return {
+                ...p,
+                count: cnt,
+                checked: cnt>0,
+                total: cnt*p.price
+              };
+            });
+          } catch(e) {
+            console.error('載入失敗',e);
+          }
+        },
+
+        update(item) {
+          item.total = (item.count||0)*item.price;
+        },
+
+        // 分組、計算小計
+        group9Items() {
+          return this.items.filter(i=>i.product_group===9);
+        },
+        otherItems() {
+          return this.items.filter(i=>i.product_group!==9);
+        },
+        calculateGroup9Total() {
+          return this.group9Items().reduce((s,i)=> s+(i.checked&&i.count>0?i.total:0),0);
+        },
+        calculateOtherGroupsTotal() {
+          return this.otherItems().reduce((s,i)=> s+(i.checked&&i.count>0?i.total:0),0);
+        },
+        calculateTotal() {
+          return this.calculateGroup9Total()+this.calculateOtherGroupsTotal();
+        },
+
+        // 全選／取消全選
+        isAllChecked() {
+          return this.items.length>0 && this.items.every(i=>i.checked);
+        },
+        toggleSelectAll() {
+          const st = !this.isAllChecked();
+          this.items.forEach(i=>i.checked=st);
         }
-    </script>
+      }
+    }
+  </script>
 </body>
-
 </html>
