--- a/total.html
+++ b/total.html
@@ -123,7 +123,7 @@
                 partnerOptions: [],       // 該日所有 partnerId
                 selectedPartners: [],     // 綁定多選結果
                 items: [],                // 試算清單
-                showOnlyWithCount: false,
+                showOnlyWithCount: true,
                 
 
                 // 1. 產生日期下拉
