--- a/total.html
+++ b/total.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title>產品試算器（多 Partner）</title>
+    <title>訂單加總</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3/dist/cdn.min.js"></script>
 </head>
@@ -12,7 +12,7 @@
 <body x-data="productApp()" x-init="init(); loadData()">
 
     <div class="container my-5">
-        <h2 class="text-center mb-4">產品試算器（多 Partner 加總）</h2>
+        <h2 class="text-center mb-4">訂單加總</h2>
 
         <div class="row mb-3 g-2">
             <div class="col-auto">
