--- a/total.html
+++ b/total.html
@@ -24,7 +24,7 @@
           return;
         }
         try {
-          const res = await fetch("/.netlify/functions/auth", {
+          const res = await fetch("/.netlify/functions/TotalPassword", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ password: pwd })
