--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
           系統只會對有打勾的產品進行金額試算喔！如果不想一個一個選，可以點選『全選』來加快操作～
         </li>
         <li>增加發送最終訂單功能，方便統整訂單資訊</li>
+        <li>訂單系統還在測試中，請還是要複製一份傳到 Line !</li>
       </ol>
 
       <!-- 功能按鈕 -->
@@ -188,7 +189,7 @@
           }
 
           try {
-            const res = await fetch("/.netlify/functions/auth", {
+            const res = await fetch("/.netlify/functions/indexPassword", {
               method: "POST",
               headers: { "Content-Type": "application/json" },
               body: JSON.stringify({ password: pwd })
@@ -345,7 +346,7 @@
           this.$refs.outputText.value = text;
           this.copyToClipboard();
 
-          const ok = confirm("確定這是最終訂單嗎？");
+          const ok = confirm("確認是否送出訂單!");
           if (ok) {
             this.sendToGmail(text);
             this.merge(
@@ -393,9 +394,9 @@
           })
             .then((res) => {
               if (res.ok) {
-                alert("已發送確認郵件！");
+
               } else {
-                alert("發送郵件失敗，請手動下單！");
+
               }
             })
             .catch((err) => {
@@ -415,17 +416,16 @@
               body: JSON.stringify(obj)
             });
             const result = await res.json();
+
             if (!res.ok || !result.success) {
               throw new Error(result.message || res.statusText);
             }
-
+            alert('已送出訂單！');
           } catch (e) {
+            alert("訂單送出失敗！");
           } finally {
-            this.merging = false;
           }
         },
-
-
 
       };
     }
