--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
           系統只會對有打勾的產品進行金額試算喔！如果不想一個一個選，可以點選『全選』來加快操作～
         </li>
         <li>增加發送最終訂單功能，方便統整訂單資訊</li>
+        <li>最新的一份訂單會覆蓋上一個舊訂單，所以如果送出後發現有誤，可以再重新傳送!</li>
         <li>訂單系統還在測試中，請還是要複製一份傳到 Line !</li>
       </ol>
 
