--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <!-- 第一列：生成文字按鈕 -->
         <div class="col-12">
           <button class="btn btn-primary w-100" @click="generateText()">
-            生成文字並複製
+             送出訂單(生成文字並複製)
           </button>
         </div>
 
