--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
       <div class="mt-4 row g-2">
         <!-- 第一列：生成文字按鈕 -->
         <div class="col-12">
-          <button class="btn btn-primary w-100" @click="generateText()">
+          <button class="btn btn-primary w-50" @click="generateText()">
              生成文字並複製
           </button>
-          <button class="btn btn-secondary w-100" @click="SendOrder()">
+          <button class="btn btn-warning w-50" @click="SendOrder()">
              送出訂單
           </button>
         </div>
