--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <!-- 功能按鈕 -->
       <div class="mt-4 row g-2">
         <!-- 第一列：生成文字按鈕 -->
-        <div class="col-12">
+        <div class="col-12 d-flex justify-content-between">
           <button class="btn btn-primary w-50" @click="generateText()">
              生成文字並複製
           </button>
